force-app/main/default/objects/Linehaul__c/fields/Shipping_Agent_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Agent_Code_Text__c</fullName>
    <label>Shipping Agent Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>