force-app/main/default/objects/Linehaul__c/fields/Shipping_City_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City_Picklist__c</fullName>
    <label>Shipping City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AHMEDABAD</fullName>
            </value>
            <value>
                <fullName>Assam</fullName>
            </value>
            <value>
                <fullName>Aurangabad</fullName>
            </value>
            <value>
                <fullName>BANGALORE</fullName>
            </value>
            <value>
                <fullName>Bengaluru</fullName>
            </value>
            <value>
                <fullName>BHOPAL</fullName>
            </value>
            <value>
                <fullName>BHUBANESHWAR</fullName>
            </value>
            <value>
                <fullName>CALICUT</fullName>
            </value>
            <value>
                <fullName>CHANDIGARH</fullName>
            </value>
            <value>
                <fullName>CHENNAI</fullName>
            </value>
            <value>
                <fullName>COCHIN</fullName>
            </value>
            <value>
                <fullName>COIMBATORE</fullName>
            </value>
            <value>
                <fullName>DELHI</fullName>
            </value>
            <value>
                <fullName>Dharwad</fullName>
            </value>
            <value>
                <fullName>GOA</fullName>
            </value>
            <value>
                <fullName>HYDERABAD</fullName>
            </value>
            <value>
                <fullName>INDORE</fullName>
            </value>
            <value>
                <fullName>JAIPUR</fullName>
            </value>
            <value>
                <fullName>JAMMU</fullName>
            </value>
            <value>
                <fullName>KOLKATA</fullName>
            </value>
            <value>
                <fullName>LUCKNOW</fullName>
            </value>
            <value>
                <fullName>MANGALORE</fullName>
            </value>
            <value>
                <fullName>MUMBAI</fullName>
            </value>
            <value>
                <fullName>NAGPUR</fullName>
            </value>
            <value>
                <fullName>PATNA</fullName>
            </value>
            <value>
                <fullName>PUNE</fullName>
            </value>
            <value>
                <fullName>RAIPUR</fullName>
            </value>
            <value>
                <fullName>RANCHI</fullName>
            </value>
            <value>
                <fullName>SURAT</fullName>
            </value>
            <value>
                <fullName>TRIVANDRUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>