force-app/main/default/objects/Linehaul__c/fields/Shipping_City_Text__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City_Text__c</fullName>
    <label>Shipping City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>