force-app/main/default/objects/Linehaul__c/fields/Shipping_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Coordinates__c</fullName>
    <label>Shipping Coordinates</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>