force-app/main/default/objects/Linehaul__c/fields/Shipping_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country_Code__c</fullName>
    <defaultValue>&apos;IN&apos;</defaultValue>
    <label>Shipping Country Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>