force-app/main/default/objects/Linehaul__c/fields/Shipping_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Pincode__c</fullName>
    <label>Shipping Pincode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>