force-app/main/default/objects/Linehaul__c/fields/Slac__c.field-meta.xml
<CustomField>
    <fullName>Slac__c</fullName>
    <label>Slac</label>
    <length>100</length>
    <type>Text</type>
</CustomField>