force-app/main/default/objects/Linehaul__c/fields/Token_Number__c.field-meta.xml
<CustomField>
    <fullName>Token_Number__c</fullName>
    <label>Token Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>