force-app/main/default/objects/Linehaul__c/fields/Total_Pieces__c.field-meta.xml
<CustomField>
    <fullName>Total_Pieces__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Total Pieces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>