force-app/main/default/objects/Linehaul__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&quot;KG&quot;</defaultValue>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>