force-app/main/default/objects/Linehaul__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <defaultValue>&apos;cms&apos;</defaultValue>
    <label>Unit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>