force-app/main/default/objects/Linehaul__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <defaultValue>&apos;K&apos;</defaultValue>
    <label>UOM</label>
    <length>5</length>
    <type>Text</type>
</CustomField>