force-app/main/default/objects/Linehaul__c/validationRules/Mandatory_fields_for_SpiceJet.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_fields_for_SpiceJet</fullName>
    <active>false</active>
    <errorConditionFormula>if( AND(AirLine_Name__c == &apos;SPICEJET&apos;,
								OR(	ISBLANK(Total_Pieces__c),ISBLANK(Weight_Dimension__c),ISBLANK(Bag_Number__c),ISBLANK(Dimension_Type__c), ISBLANK(Type__c),
											ISBLANK(Route_Type__c),ISBLANK(From__c),ISBLANK(Flight_Code__c),ISBLANK(Mode__c) )),TRUE,false)</errorConditionFormula>
    <errorMessage>Please Fill the Required Fields-
Total Pieces
Weight Dimension
Dimension Type
Bag Number
Type
Route Type
From
Flight Code
Mode</errorMessage>
</ValidationRule>