force-app/main/default/objects/Linehaul__c/validationRules/Select_Airline_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_Airline_mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>IF(ISBLANK(TEXT(Select_Airline__c)),true,
IF(AND(NOT(ISBLANK(TEXT(Select_Airline__c))),(ISPICKVAL(Select_Airline__c,&quot;SPICEJET&quot;)),ISBLANK(Flight_No_for_SpiceJet_Indigo__c)),true,false))</errorConditionFormula>
    <errorMessage>Please Select Flight Number or Do not Select Flight Number for Indigo Airline.</errorMessage>
</ValidationRule>