force-app/main/default/objects/Linehaul__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AirLine_Name__c</columns>
    <columns>AWB_Number__c</columns>
    <columns>Flight_No_for_SpiceJet_Indigo__c</columns>
    <columns>Origin__c</columns>
    <columns>Destination__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>