force-app/main/default/objects/Linehaul__c/listViews/Indigo.listView-meta.xml
<ListView>
    <fullName>Indigo</fullName>
    <columns>NAME</columns>
    <columns>AWB_Number__c</columns>
    <columns>Flight_Date__c</columns>
    <columns>Origin__c</columns>
    <columns>Destination__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AirLine_Name__c</field>
        <operation>equals</operation>
        <value>Indigo</value>
    </filters>
    <label>Indigo</label>
</ListView>